Prevent open list-boxes to go behind other elements

--- a/assets/stylesheets/components/_list-boxes.scss
+++ b/assets/stylesheets/components/_list-boxes.scss
@@ -17,7 +17,7 @@
   &:hover,
   &:focus,
   &:focus-within {
-    z-index: layer('default');
+    z-index: layer('dropdown');
 
     height: $gutter * 6;
     padding: $gutter * 0.5;
